# AI_enhanced_Voxel_Game_Engine

./: .gitignore  CMakeLists.txt  README.md  camera.h  dynamic.h  main.c  object.c  object.h  physics.c  physics.h  run.py  shaders.c  shaders.h  texture.c  texture.h  window.c  window.h
models/: bimax.fbx  player.fbx
shaders/: def.fs  def.vs  def_shadowmap.fs  def_shadowmap.gs  def_shadowmap.vs  def_shadowmap_br.vs  def_shadowmap_ins.vs  def_tex.fs  def_tex.vs  def_tex_light.fs  def_tex_light.vs  def_tex_light_br.fs  def_tex_light_br.vs  def_tex_light_ins.vs  def_tex_light_opt_br.fs  def_tex_light_opt_br.vs  deferred_br.fs  deferred_br.vs  gbuffer_br.fs  gbuffer_br.vs  post_process.fs  skybox.fs  skybox.vs  ssao.fs  ssao_blur.fs  text.fs  text.vs  water.fs  water.vs
src/: camera.c  camera.h  dynamic.c  main.c  object.c  object.h  physics.h  shaders.c  shaders.h  snoise.c  snoise.h  texture.c  window.c  window.h  world.c  world.h
src/core/: animation.c  animation.h  br_object.c  br_object.h  br_texture.c  br_texture.h  camera.c  camera.h  chunk.c  chunk.h  core.h  dynamic.c  dynamic.h  font.c  font.h  ins_object.c  ins_object.h  jolt_physics.cpp  jolt_physics.h  lighting.c  lighting.h  load_object.c  load_object.h  macro.h  object.c  object.h  physics.c  physics.h  player.c  player.h  random.c  random.h  shaders.c  shaders.h  skybox.c  skybox.h  snoise.c  snoise.h  texture.c  texture.h  (+12 more)
src/game/: chunk.c  chunk.h  gameloop.c  gameloop.h  player.c  player.h  snoise.c  world.c  world.h  world_batch.c  world_batch.h  world_instanced.c  world_instanced.h
src_py/: depins.py  genhm.py
